<resources>
    <string name="app_name">Renter\'s Block</string>
    <string name="fabric_app_id">a175b9b8fdbc8dede3f17d11413d00fbadf55371</string>
    <string name="facebook_app_id">493902087441931</string>
    <string name="google_map_id">AIzaSyCBS9owmjeiWT0wNh4mjpI3jW2ro8E-S5c</string>
    <string name="get_started">Get Started</string>
    <string name="cancel">Cancel</string>
    <string name="renters_block">Renter\&apos;s Block</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="or">Or</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="agree">By tapping Register you agree to our</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="send">Send</string>
    <string name="success">Success</string>
    <string name="msg_txt">Here\'s the property ID - </string>
    <string name="enter_your_city">Enter your city</string>
    <string name="login">Login</string>
    <string name="my_block">My Block</string>
    <string name="listing">Listings</string>
    <string name="hot_leads">Hot Leads</string>
    <string name="reviews">Reviews</string>
    <string name="friends">Friends</string>
    <string name="scheduling">Scheduling</string>
    <string name="profile">Profile</string>
    <string name="pending">Pending</string>
    <string name="search">Search</string>
    <string name="exclusives">Exclusives</string>
    <string name="homes_for_rent">Homes for Rent</string>
    <string name="homes_for_sale">Homes for Sale</string>
    <string name="saved_searches">Saved Searches</string>
    <string name="my_favourites">My Favorites</string>
    <string name="alerts">Alerts</string>
    <string name="open_houses">Open Houses</string>
    <string name="find_an_agent">Find an Agent</string>
    <string name="photos_videos">Photos &amp; Videos</string>
    <string name="more">More</string>
    <string name="feedback">Feedback</string>
    <string name="rate_this_app">Rate this App</string>
    <string name="share_this_app">Share this App</string>
    <string name="settings">Settings</string>
    <string name="map_view">Map View</string>
    <string name="my_reviews">My Reviews</string>
    <string name="edit_review">Edit Review</string>
    <string name="update_review">Update Review</string>
    <string name="view_business">View Business</string>
    <string name="view_listing">View Listing</string>
    <string name="close">Close</string>
    <string name="post">Post</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="con">Continue</string>
    <string name="post_review">Post Review</string>
    <string name="write_review_hint"> Did you have to deal with the World’s Worst Landlord for what seemed like an eternity? Were you so happy with your experience that you shed a few tears when you closed the door on the apartment for the last time? We want to hear about it! Whether it’s to save future souls from blood-thirsty realtors or to shed light on AMAZING apartments that would otherwise go unnoticed, lay it out for us.</string>
    <string name="post_review_hint">You are leaving another review for this business.Only the rating for your most recent review counts towards the business average rating.</string>
    <string name="alert_rating">Please select rating</string>
    <string name="add_listing_header">Add Listing</string>
    <string name="edit_listing">Edit Listing</string>
    <string name="listing_header">Listings</string>
    <string name="property_header">Properties</string>
    <string name="address">Address</string>
    <string name="add_loc_map">Add location on map</string>
    <string name="select_any_property">Please select any property</string>
    <string name="select_one_property">Please select one property</string>
    <string-array name="property_types">
        <item>Single-Family Home</item>
        <item>Condo</item>
        <item>Townhouse</item>
        <item>Coop</item>
        <item>Apartment</item>
        <item>Loft</item>
        <item>TIC</item>
        <item>Apartment/Condo/Townhouse</item>
        <item>Mobile/Manufactured</item>
        <item>Farm/Ranch</item>
        <item>Lot/land</item>
        <item>Multi-Family</item>
        <item>Income/Investment</item>
        <item>Houseboat</item>
    </string-array>
    <string name="to_with_colon">To:</string>
    <string name="sub_with_colon">Subject:</string>
    <string name="message">Message</string>
    <string name="android_version_with_colon">Android Version:</string>
    <string name="app_version_with_colon">App Version:</string>
    <string name="device_with_colon">Device:</string>
    <string name="support_email">support@rentersblock.com</string>
    <string name="version">v</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="sign_out">Sign out</string>
    <string name="exit_msg">Are you sure want to Exit?</string>
    <string name="please_enter_email">Please enter the email</string>
    <string name="please_enter_valid_email">Please enter the valid email</string>
    <string name="please_enter_password">Please enter the password</string>
    <string name="logout_msg">Are you sure, you want to sign out?</string>
    <string name="enter_current_pwd">Please Enter Current password.</string>
    <string name="enter_new_pwd">Please Enter New password.</string>
    <string name="enter_conf_pwd">Please Enter Confirm New password.</string>
    <string name="pwd_does_not_match">Password doesn\'t match.</string>
    <string name="please_enter_msg">Please enter the message</string>
    <string name="please_enter_name">Please enter the name</string>
    <string name="no_email_id_fb">Sorry, you do not have email id in your facebook account. Please try with different account, that has email id.</string>
    <string name="please_enter_email_address">Please enter your Email Address</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_location_save">Please enter location to save</string>
    <string name="err_create_frag">Error in creating fragment</string>
    <string name="google_unauthenticated">Google Unauthenticated</string>
    <string name="err_empty_location">Please select location</string>
    <string name="not_valid_location">Not valid location</string>
    <string name="logged_in">logged in successfully!</string>
    <string name="registered">registered successfully </string>
    <string name="logged_out">You are logged out successfully</string>
    <string name="send_email">Send email &#8230;</string>
    <string name="please_upload_image">Please upload image</string>
    <string name="please_enter_address">Please enter address</string>
    <string name="please_enter_description">Please enter description</string>
    <string name="please_enter_price">Please enter price</string>
    <string name="sorry_unable_create">Sorry! unable to create maps</string>
    <string name="connection_suspended">onConnectionSuspended</string>
    <string name="go_settings_per">Go to settings and enable permissions</string>
    <string name="connect_time_out">Connection to Renter\'s Block App Server timeout, please try again.</string>
    <string name="no_internet"> Please verify your internet connection.</string>
    <string name="play_service_err">Google Play Services Error</string>
    <string name="device_not_support">This device is not supported for required Google Play Services. Please update your Google Play Services</string>
    <string name="user_not_update"> User does not update location setting</string>
    <string name="create_account">Create Your Account</string>
    <string name="are_looking">Are you looking to:</string>
    <string name="are_you">Are you a(n):</string>
    <string name="buy">Buy</string>
    <string name="rent">Rent</string>
    <string name="sell">Sell</string>
    <string name="agent">Agent</string>
    <string name="broker">Broker</string>
    <string name="skip">Skip</string>
    <string name="email_text">Email</string>
    <string name="pass_text">Password</string>
    <string name="business_name">Business Name</string>
    <string name="business_name_optional">Business Name (Optional)</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="zip_text">Zip</string>
    <string name="phone_text">Phone</string>
    <string name="phone_optional">Phone (Optional)</string>
    <string name="address_1">Address Line1</string>
    <string name="address_2">Address Line2</string>
    <string name="city_state_zip">City,State,Zip</string>
    <string name="enhanced_profile">Enhanced Profile</string>
    <string name="standard_profile">Standard Profile</string>
    <string name="acc_manager">Account Manager</string>
    <string name="home_owner">Home Owner</string>
    <string name="register">Register</string>
    <string name="terms_of_use_txt">By tapping Register you agree to our\nTerms of Use and Privacy Policy</string>
    <string name="please_enter_first_name">Please enter the first name</string>
    <string name="please_enter_last_name">Please enter the last name</string>
    <string name="please_enter_user_name">Please enter the user name</string>
    <string name="please_enter_zipcode">Please enter the zipcode</string>
    <string name="please_enter_business_name">Please enter the business name</string>
    <string name="please_enter_address_line1">Please enter the address line1</string>
    <string name="please_enter_address_line2">Please enter the address line2</string>
    <string name="please_enter_phone_number">Please enter the phone number</string>
    <string name="please_enter_city_state">Please enter the City, State, Zip</string>
    <string name="verification_mail">Registered successfully, Verification mail sent to your mail id.</string>
    <string name="choose_exisiting_photo">Choose Existing Photo</string>
    <string name="select_video">Select Video</string>
    <string name="choose_exisiting_video">Choose Existing Video</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="choose">Choose Photo or Video</string>
    <string name="user_cancelled">User cancelled image capture</string>
    <string name="sorry_failed_img">Sorry! Failed to capture image</string>
    <string name="picture">Picture</string>
    <string name="select_photo">Select Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_pic">Choose Picture</string>
    <string name="choose_video">Choose Video</string>
    <string name="choose_existing_photo">Choose Existing Photo</string>
    <string name="choose_existing_video">Choose Existing Video</string>
    <string name="take_video">Take Video</string>
    <string name="tut_header1">Home searching made easy</string>
    <string name="tut_header2">Find homes near you</string>
    <string name="tut_header3">Early bird gets the home</string>
    <string name="tut_header4">Review your home or apartment</string>
    <string name="tut_header5">Real-time video chat</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm new password</string>
    <string name="audio_record">Audio Record</string>
    <string name="record">Record</string>
</resources>