<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LayoutMatch"
    android:orientation="vertical">

    <LinearLayout
        style="@style/LayoutWidMatch_HeiWrap"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/size30"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            style="@style/LayoutWidMatch_HeiWrap"
            android:background="@color/app_blue">

            <TextView
                android:id="@+id/title_txt"
                style="@style/TextHelveticaBold"
                android:layout_height="@dimen/size40"
                android:layout_toStartOf="@+id/close_img"
                android:padding="@dimen/size5"
                android:text="@string/change_password"
                android:textColor="@color/white"
                android:textSize="@dimen/text12" />

            <ImageView
                android:id="@+id/close_img"
                android:layout_width="@dimen/size15"
                android:layout_height="@dimen/size15"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/size20"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/close_icon" />


        </RelativeLayout>


        <EditText
            android:id="@+id/current_pw_edt"
            style="@style/TextHelveticaBold"
            android:layout_height="@dimen/size30"
            android:layout_margin="@dimen/size20"
            android:background="@drawable/border_gray_without_corner"
            android:gravity="start|center"
            android:hint="@string/current_password"
            android:inputType="text"
            android:paddingEnd="0dp"
            android:paddingStart="@dimen/size10"
            android:textSize="@dimen/text10" />

        <EditText
            android:id="@+id/new_pw_edt"
            style="@style/TextHelveticaBold"
            android:layout_height="@dimen/size30"
            android:layout_marginBottom="@dimen/size20"
            android:layout_marginEnd="@dimen/size20"
            android:layout_marginStart="@dimen/size20"
            android:background="@drawable/border_gray_without_corner"
            android:gravity="start|center"
            android:hint="@string/new_password"
            android:inputType="text"
            android:paddingEnd="0dp"
            android:paddingStart="@dimen/size10"
            android:textSize="@dimen/text10" />

        <EditText
            android:id="@+id/confirm_pw_edt"
            style="@style/TextHelveticaBold"
            android:layout_height="@dimen/size30"
            android:layout_marginBottom="@dimen/size20"
            android:layout_marginEnd="@dimen/size20"
            android:layout_marginStart="@dimen/size20"
            android:background="@drawable/border_gray_without_corner"
            android:gravity="start|center"
            android:hint="@string/confirm_password"
            android:inputType="text"
            android:paddingEnd="0dp"
            android:paddingStart="@dimen/size10"
            android:textSize="@dimen/text10" />

        <Button
            android:id="@+id/update_btn"
            style="@style/TextHelveticaBold"
            android:layout_width="@dimen/size100"
            android:layout_height="@dimen/size30"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/size20"
            android:background="@color/app_blue"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="@dimen/text12" />

    </LinearLayout>
</RelativeLayout>