<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   style="@style/LayoutMatch">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size150"
        android:layout_marginLeft="@dimen/size30"
        android:layout_marginRight="@dimen/size30"
        android:layout_centerInParent="true"
        android:background="@drawable/border_with_white_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size20"
            android:text="@string/audio_record"
            android:textColor="@color/grey"
            style="@style/TextHelveticaBold"
            android:textSize="@dimen/text18" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center|bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/record_txt"
                android:layout_width="@dimen/size100"
                android:layout_height="@dimen/size40"
                android:gravity="center"
                android:text="@string/record"
                android:textColor="@color/app_blue"
                android:textSize="@dimen/text18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/send_txt"
                android:layout_width="@dimen/size100"
                android:layout_height="@dimen/size40"
                android:gravity="center"
                android:text="@string/send"
                android:textColor="@color/app_blue"
                android:textSize="@dimen/text18"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/close_img"
            android:layout_width="@dimen/size18"
            android:layout_height="@dimen/size18"
            android:layout_alignParentEnd="true"
            android:layout_gravity="top|end"
            android:layout_marginEnd="11dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/close_icon" />
    </RelativeLayout>


</RelativeLayout>